ops/transferservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-app
  namespace: fsi
spec:
  selector:
    matchLabels:
      app: transfer-app
  replicas: 1
  template:
    metadata:
      labels:
        app: transfer-app
    spec:
      containers:
        - name: transfer-app-container
          image: transferservice
          resources:
            limits:
              cpu: "400m"
              memory: 512Mi
            requests:
              cpu: "200m"
              memory: 256Mi
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: "service-account"
              mountPath: "/var/goog/secrets"
              readOnly: true
      volumes:
        - name: "service-account"
          secret:
            secretName: svc-key
