ops/transferservice/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: transfer-app-svc
  namespace: fsi
spec:
  type: ClusterIP
  selector:
    app: transfer-app
  ports:
  - name: http
    port: 5000
    targetPort: 5000
